feat: GLP-1 uygunluk testi - klinik kılavuz bazlı değerlendirme aracı
- 6 adımlı wizard: BMI, yaş/cinsiyet, komorbidite, kontrendikasyon, önceki denemeler, aile öyküsü
- AACE 2024, AGA 2025, Endocrine Society kılavuzlarına dayalı sonuç mantığı
- 4 sonuç kategorisi: Uygun/Değerlendirme Gerekli/Önerilmiyor/BMI Normal
- Mobile-first, pure HTML/CSS/JS, print desteği
- GA event tracking (adım + sonuç)
- Homepage, araclar.html, glp1-tam-rehber.html ve sitemap güncellendi

--- a/pages/araclar.html
+++ b/pages/araclar.html
@@ -465,7 +465,13 @@
  </div>
  </section>
 
- <nav class="tool-nav">
+  <div style="background:linear-gradient(135deg,#0D7377,#0f8a8f);padding:1.25rem 2rem;text-align:center;">
+ <a href="araclar/glp1-uygunluk-testi.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
+  💊 YENİ: GLP-1 Uygunluk Testi — Size uygun mu öğrenin →
+ </a>
+ </div>
+
+<nav class="tool-nav">
  <div class="tool-nav-inner">
  <button class="tool-nav-btn active" data-tool="bmi">BMI Hesapla</button>
  <button class="tool-nav-btn" data-tool="calorie">Kalori İhtiyacı</button>
