feat: add interactive Turkey obesity map
- Interactive SVG map with 7 regions color-coded by obesity rate
- Hover tooltips with region name, obesity rate, population
- Above/below Turkey average indicator (32.1%)
- Top 10 most obese cities ranking sidebar
- Mobile responsive: horizontal bar list view on small screens
- Green→yellow→red gradient color scale
- GA event tracking for map interactions
- Added to araclar.html banner and sitemap.xml

--- a/404.html
+++ b/404.html
@@ -19,6 +19,7 @@
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="styles/main.css">
+ <link rel="stylesheet" href="styles/animations.css">
  <style>
  header {
  background: #195157;
@@ -133,5 +134,6 @@
  </div>
  </div>
  <footer role="contentinfo">© 2026 UzunYaşa — Bilimle daha uzun, daha iyi yaşam.</footer>
+<script src="scripts/animations.js"></script>
 </body>
 </html>
