--- a/pages/araclar.html
+++ b/pages/araclar.html
@@ -19,6 +19,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../styles/main.css">
  <link rel="stylesheet" href="../styles/hub-upgrade.css">
+ <link rel="stylesheet" href="../styles/animations.css">
  <style>
  .tool-nav {
  background: var(--bg-white);
@@ -465,9 +466,12 @@
  </div>
  </section>
 
-  <div style="background:linear-gradient(135deg,#0D7377,#0f8a8f);padding:1.25rem 2rem;text-align:center;">
+  <div style="background:linear-gradient(135deg,#0D7377,#0f8a8f);padding:1.25rem 2rem;text-align:center;display:flex;gap:2rem;justify-content:center;flex-wrap:wrap;">
  <a href="araclar/glp1-uygunluk-testi.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
-  💊 YENİ: GLP-1 Uygunluk Testi — Size uygun mu öğrenin →
+  💊 GLP-1 Uygunluk Testi →
+ </a>
+ <a href="araclar/turkiye-obezite-haritasi.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
+  🗺️ YENİ: Türkiye Obezite Haritası →
  </a>
  </div>
 
@@ -1049,5 +1053,6 @@
  document.getElementById("hub-nl-success").style.display = "block";
  }
  </script>
+<script src="../scripts/animations.js"></script>
 </body>
 </html>
