--- a/pages/ecem-app.html
+++ b/pages/ecem-app.html
@@ -23,6 +23,7 @@
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../styles/main.css">
+ <link rel="stylesheet" href="../styles/animations.css">
  <style>
  .header-avatar {
  width: 45px;
@@ -581,5 +582,6 @@ Bugün ne yediğinizi söyleyin, kalori takibi yapalım!
  checkDailyReset();
  init();
  </script>
+<script src="../scripts/animations.js"></script>
 </body>
 </html>
