--- a/pages/icerik-haritasi.html
+++ b/pages/icerik-haritasi.html
@@ -19,6 +19,7 @@
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../styles/main.css">
+ <link rel="stylesheet" href="../styles/animations.css">
  <style>
  .ih-hero {
  background: linear-gradient(135deg, #195157 0%, #0D7377 100%);
@@ -481,5 +482,6 @@
  document.getElementById('noResults').style.display = anyVisible ? 'none' : 'block';
  });
  </script>
+<script src="../scripts/animations.js"></script>
 </body>
 </html>
