--- a/pages/kullanim-sartlari.html
+++ b/pages/kullanim-sartlari.html
@@ -18,6 +18,7 @@
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../styles/main.css">
+ <link rel="stylesheet" href="../styles/animations.css">
  <style>
  .ep-hero {
  background: linear-gradient(135deg, rgba(25,81,87,0.9), rgba(13,115,119,0.85)), url('https://images.unsplash.com/photo-1450101499163-c8848c66ca85?w=1400&q=80') center/cover;
@@ -217,5 +218,6 @@
  </div>
  </div>
  </footer>
+<script src="../scripts/animations.js"></script>
 </body>
 </html>
