--- a/pages/preview-ai-experts.html
+++ b/pages/preview-ai-experts.html
@@ -16,6 +16,7 @@
     <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../styles/main.css">
+ <link rel="stylesheet" href="../styles/animations.css">
  <style>
  /* ===== AI EXPERTS SECTION ===== */
  .ai-experts-section {
@@ -639,5 +640,6 @@
  }
 </script>
 
+<script src="../scripts/animations.js"></script>
 </body>
 </html>
