--- a/pages/raporum.html
+++ b/pages/raporum.html
@@ -18,6 +18,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../styles/main.css">
+ <link rel="stylesheet" href="../styles/animations.css">
 <style>
 :root{--primary:#0D7377;--primary-dark:#195157;--accent:#E8963E;--bg:#f8fafa;--card:#fff;--text:#1a2e35;--text-light:#5a7a84;--success:#10b981;--warning:#f59e0b;--danger:#ef4444}
 *{margin:0;padding:0;box-sizing:border-box}
@@ -201,5 +202,6 @@ document.getElementById('report').scrollIntoView({behavior:'smooth',block:'start
 gtag('event','report_generated',{bmi:bmiR,goal:goal});
 }
 </script>
+<script src="../scripts/animations.js"></script>
 </body>
 </html>
