--- a/pages/stres/nefes-teknikleri.html
+++ b/pages/stres/nefes-teknikleri.html
@@ -23,6 +23,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
  <link rel="stylesheet" href="../../styles/content-page.css">
+ <link rel="stylesheet" href="../../styles/animations.css">
  <script type="application/ld+json">
  {
  "@context": "https://schema.org",
@@ -348,5 +349,6 @@
  </div>
  </footer>
  <script src="../../scripts/content-page.js" defer></script>
+<script src="../../scripts/animations.js"></script>
 </body>
 </html>
