--- a/pages/uyku/ruya-ve-uyku-evreleri.html
+++ b/pages/uyku/ruya-ve-uyku-evreleri.html
@@ -35,6 +35,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
  <link rel="stylesheet" href="../../styles/content-page.css">
+ <link rel="stylesheet" href="../../styles/animations.css">
  <style>
  .guide-hero { position: relative; padding: 8rem 2rem 4rem; color: white; }
  .guide-hero-bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
@@ -399,5 +400,6 @@
  </div>
  </footer>
  <script src="../../scripts/content-page.js" defer></script>
+<script src="../../scripts/animations.js"></script>
 </body>
 </html>
