--- a/pages/bilim.html
+++ b/pages/bilim.html
@@ -19,6 +19,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../styles/main.css">
  <link rel="stylesheet" href="../styles/hub-upgrade.css">
+ <link rel="stylesheet" href="../styles/animations.css">
  <style>
  .principles-bar {
  background: var(--bg-white);
@@ -945,5 +946,6 @@
  document.getElementById("hub-nl-success").style.display = "block";
  }
  </script>
+<script src="../scripts/animations.js"></script>
 </body>
 </html>
