--- a/pages/danisma-kurulu.html
+++ b/pages/danisma-kurulu.html
@@ -18,6 +18,7 @@
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../styles/main.css">
+ <link rel="stylesheet" href="../styles/animations.css">
  <style>
  .dk-hero {
    background: linear-gradient(135deg, rgba(25,81,87,0.92), rgba(13,115,119,0.88)), url('https://images.unsplash.com/photo-1576091160550-2173dba999ef?w=1400&q=80') center/cover;
@@ -495,5 +496,6 @@
      </div>
    </div>
  </footer>
+<script src="../scripts/animations.js"></script>
 </body>
 </html>
