--- a/pages/egzersiz.html
+++ b/pages/egzersiz.html
@@ -20,6 +20,7 @@
  <link rel="stylesheet" href="../css/pages.css">
  <link rel="stylesheet" href="../styles/main.css">
  <link rel="stylesheet" href="../styles/hub-upgrade.css">
+ <link rel="stylesheet" href="../styles/animations.css">
  <style>
  .content-section.full { max-width: 100%; }
 
@@ -519,5 +520,6 @@
  document.getElementById("hub-nl-success").style.display = "block";
  }
  </script>
+<script src="../scripts/animations.js"></script>
 </body>
 </html>
