--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -20,6 +20,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../styles/main.css">
  <link rel="stylesheet" href="../styles/hub-upgrade.css">
+ <link rel="stylesheet" href="../styles/animations.css">
  <style>
  .content-section.full { max-width: 100%; }
 
@@ -873,5 +874,6 @@
  document.getElementById("hub-nl-success").style.display = "block";
  }
  </script>
+<script src="../scripts/animations.js"></script>
 </body>
 </html>
