--- a/pages/rehberler/plato-kirma.html
+++ b/pages/rehberler/plato-kirma.html
@@ -17,6 +17,7 @@
  <meta name="description" content="Kilo verirken takılıp kaldınız mı? Metabolizmayı hızlandırma ve plato dönemini aşma stratejileri.">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
+ <link rel="stylesheet" href="../../styles/animations.css">
  <style>
  .guide-hero { position: relative; padding: 8rem 2rem 4rem; color: white; }
  .guide-hero-bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
@@ -190,5 +191,6 @@
  </main>
 
  <footer><p style="font-size:0.85rem;font-style:italic;opacity:0.7;margin-bottom:0.5rem;">Türkiye uzun yaşasın diye.</p><p>© 2026 UzunYaşa. Tüm hakları saklıdır.</p></footer>
+<script src="../../scripts/animations.js"></script>
 </body>
 </html>
