--- a/pages/tedavi/endoskopik-prosedurler.html
+++ b/pages/tedavi/endoskopik-prosedurler.html
@@ -18,6 +18,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
  <link rel="stylesheet" href="../../styles/content-page.css">
+ <link rel="stylesheet" href="../../styles/animations.css">
  <style>
  article { max-width: 800px; margin: 0 auto; padding: 7rem 2rem 4rem; }
  .breadcrumb { font-size: 0.9rem; color: var(--text-gray); margin-bottom: 1.5rem; }
@@ -364,5 +365,6 @@
 
  <footer><p style="font-size:0.85rem;font-style:italic;opacity:0.7;margin-bottom:0.5rem;">Türkiye uzun yaşasın diye.</p><p>© 2026 UzunYaşa. <a href="https://tyzd.org" target="_blank" style="color:inherit;text-decoration:underline;">Tıpta Yapay Zeka Derneği</a> girişimidir.</p></footer>
  <script src="../../scripts/content-page.js" defer></script>
+<script src="../../scripts/animations.js"></script>
 </body>
 </html>
