--- a/pages/tesekkurler.html
+++ b/pages/tesekkurler.html
@@ -16,6 +16,7 @@
     <meta property="og:image" content="https://uzunyasa.com/images/og-default.png">
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../styles/main.css">
+ <link rel="stylesheet" href="../styles/animations.css">
  <style>
  .main { flex: 1; display: flex; align-items: center; justify-content: center; padding: 2rem; }
  .card { background: white; padding: 3rem; border-radius: 20px; text-align: center; max-width: 500px; box-shadow: 0 10px 40px rgba(0,0,0,0.08); }
@@ -47,5 +48,6 @@
  <p style="font-size:0.85rem;font-style:italic;opacity:0.7;margin-bottom:0.5rem;">Türkiye uzun yaşasın diye.</p>
  <p>© 2026 UzunYaşa. <a href="https://tyzd.org" target="_blank" style="color:inherit;text-decoration:underline;">Tıpta Yapay Zeka Derneği</a> girişimidir.</p>
  </footer>
+<script src="../scripts/animations.js"></script>
 </body>
 </html>
