feat: add Kalori Karşılaştırıcı (calorie comparison quiz tool)
- 20 Turkish food pairs with calorie data and fun facts
- Tinder-style guess mechanic with reveal animations
- Score tracking, share buttons (WhatsApp, Twitter, clipboard)
- Mobile-first responsive design
- GA event tracking
- Added to homepage tools grid and sitemap

--- a/index.html
+++ b/index.html
@@ -2183,6 +2183,10 @@
  <div class="tool-card-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 38L10 10L38 38H10Z" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 18L16 18" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M10 26L14 26" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M10 34L14 34" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M18 38V34" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M26 38V34" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M34 38V36" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/></svg></div>
  <div class="tool-card-title">Vücut Oranları</div>
  </a>
+ <a href="pages/araclar/kalori-karsilastirici.html" class="tool-card" style="border-color:#E8963E;background:linear-gradient(135deg,#fffbeb,#fff);">
+  <div class="tool-card-icon">⚖️</div>
+  <div class="tool-card-title">Kalori Karşılaştırıcı</div>
+ </a>
  <p style="text-align:center;margin-top:1.5rem;font-size:0.85rem;color:rgba(0,0,0,0.45);font-style:italic;">Yakında: Hesap oluşturarak sonuçlarınızı kaydedin</p>
  </div>
  </div>
