Add 'Kaç Kilo Vermeliyim?' weight loss calculator
- New interactive 3-step calculator: basic info → activity level → goal selection
- Mifflin-St Jeor TDEE calculation with 500 kcal deficit
- Personalized results: target weight, timeline, daily calories
- Visual progress bar, donut chart (body composition), health timeline
- Animated count-up numbers, mobile-first, print support
- Goal options: healthy BMI, 5%/10%/15% weight loss with health impact descriptions
- CTAs to treatment comparison, GLP-1 test, nutrition hub
- Added to araclar.html banner, homepage tools grid, sitemap
- GA tracking for start/step/complete events

--- a/index.html
+++ b/index.html
@@ -2167,6 +2167,10 @@
  <a href="pages/test.html" class="btn btn-lg">Teste Başla →</a>
  </div>
  <div class="tools-grid">
+ <a href="pages/araclar/kac-kilo-vermeliyim.html" class="tool-card" style="border-color:#0D7377;background:linear-gradient(135deg,#f0fdfa,#fff);">
+  <div class="tool-card-icon">⚖️</div>
+  <div class="tool-card-title">Kaç Kilo Vermeliyim?</div>
+ </a>
  <a href="pages/araclar/glp1-uygunluk-testi.html" class="tool-card" style="border-color:#0D7377;background:linear-gradient(135deg,#f0fdfa,#fff);">
   <div class="tool-card-icon">💊</div>
   <div class="tool-card-title">GLP-1 Uygunluk Testi</div>
