--- a/pages/araclar.html
+++ b/pages/araclar.html
@@ -467,11 +467,14 @@
  </section>
 
   <div style="background:linear-gradient(135deg,#0D7377,#0f8a8f);padding:1.25rem 2rem;text-align:center;display:flex;gap:2rem;justify-content:center;flex-wrap:wrap;">
+ <a href="araclar/kac-kilo-vermeliyim.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
+  ⚖️ YENİ: Kaç Kilo Vermeliyim? →
+ </a>
  <a href="araclar/glp1-uygunluk-testi.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
   💊 GLP-1 Uygunluk Testi →
  </a>
  <a href="araclar/turkiye-obezite-haritasi.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
-  🗺️ YENİ: Türkiye Obezite Haritası →
+  🗺️ Türkiye Obezite Haritası →
  </a>
  </div>
 
