Link animations.css/js to remaining 3 tool pages

--- a/pages/araclar/turkiye-obezite-haritasi.html
+++ b/pages/araclar/turkiye-obezite-haritasi.html
@@ -24,6 +24,7 @@
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="../../styles/main.css">
+ <link rel="stylesheet" href="../../styles/animations.css">
  <style>
   :root {
    --teal: #0D7377;
@@ -714,5 +715,6 @@
   }).join('');
  document.getElementById('mobile-list').innerHTML = mobileHtml;
  </script>
+<script src="../../scripts/animations.js"></script>
 </body>
 </html>
