--- a/pages/araclar/kalori-karsilastirici.html
+++ b/pages/araclar/kalori-karsilastirici.html
@@ -24,6 +24,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../../styles/main.css">
+ <link rel="stylesheet" href="../../styles/animations.css">
 <style>
 :root {
  --teal: #0D7377;
@@ -574,5 +575,6 @@ function restartGame() {
  window.scrollTo({ top: 0, behavior: 'smooth' });
 }
 </script>
+<script src="../../scripts/animations.js"></script>
 </body>
 </html>
