feat: add Diyet Asistanı - AI-powered weekly Turkish meal planner
- 5-step wizard: profile, goal, preferences, allergies, meal count
- BMI & TDEE (Mifflin-St Jeor) auto-calculation
- 65+ Turkish meal database with macros, allergens, ingredients
- 7-day meal plan generation with variety enforcement
- Donut charts for daily macro distribution
- Shopping list generator, WhatsApp share, print, localStorage save
- Mobile-first responsive, matches site styling
- Added to araclar.html, homepage, sitemap

--- a/pages/araclar.html
+++ b/pages/araclar.html
@@ -476,6 +476,9 @@
  <a href="araclar/turkiye-obezite-haritasi.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
   🗺️ Türkiye Obezite Haritası →
  </a>
+ <a href="araclar/diyet-asistani.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
+  🥗 Diyet Asistanı →
+ </a>
  </div>
 
 <nav class="tool-nav">
