--- a/index.html
+++ b/index.html
@@ -2175,6 +2175,10 @@
   <div class="tool-card-icon">💊</div>
   <div class="tool-card-title">GLP-1 Uygunluk Testi</div>
  </a>
+ <a href="pages/araclar/diyet-asistani.html" class="tool-card" style="border-color:#0D7377;background:linear-gradient(135deg,#f0fdfa,#fff);">
+  <div class="tool-card-icon">🥗</div>
+  <div class="tool-card-title">Diyet Asistanı</div>
+ </a>
  <a href="pages/araclar.html#bmi" class="tool-card">
  <div class="tool-card-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="8" y="14" width="32" height="20" rx="3" stroke="#0D7377" stroke-width="2.5"/><path d="M14 14V20" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M20 14V22" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M26 14V20" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M32 14V22" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><circle cx="24" cy="28" r="3" stroke="#0D7377" stroke-width="1.5"/><path d="M24 25V22" stroke="#0D7377" stroke-width="1.5" stroke-linecap="round"/></svg></div>
  <div class="tool-card-title">BMI Hesapla</div>
