Add Egzersiz Asistanı (Exercise Assistant) tool
- Personalized weekly workout program generator
- 6-step wizard: profile/BMI, fitness level, goal, equipment, schedule, health
- 60+ exercises database with Turkish names and descriptions
- Smart program logic based on goals (weight loss/muscle/health/endurance/stress)
- Health limitation awareness (knee/back/shoulder/heart/pregnancy)
- Progress tracking with localStorage
- Confetti animation on day completion
- WhatsApp sharing, print-friendly
- Added to homepage, araclar.html, and sitemap

--- a/index.html
+++ b/index.html
@@ -2195,6 +2195,10 @@
   <div class="tool-card-icon">⚖️</div>
   <div class="tool-card-title">Kalori Karşılaştırıcı</div>
  </a>
+ <a href="pages/araclar/egzersiz-asistani.html" class="tool-card" style="border-color:#10B981;background:linear-gradient(135deg,#f0fdf4,#fff);">
+  <div class="tool-card-icon">🏋️</div>
+  <div class="tool-card-title">Egzersiz Asistanı</div>
+ </a>
  <p style="text-align:center;margin-top:1.5rem;font-size:0.85rem;color:rgba(0,0,0,0.45);font-style:italic;">Yakında: Hesap oluşturarak sonuçlarınızı kaydedin</p>
  </div>
  </div>
