--- a/pages/araclar.html
+++ b/pages/araclar.html
@@ -479,6 +479,9 @@
  <a href="araclar/diyet-asistani.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
   🥗 Diyet Asistanı →
  </a>
+ <a href="araclar/egzersiz-asistani.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
+  🏋️ Egzersiz Asistanı →
+ </a>
  </div>
 
 <nav class="tool-nav">
