fix: correct https-redirect.js paths, add missing logo symlink, update copyright year
- Fix 88 HTML files with wrong relative paths for scripts/https-redirect.js
  (changed to absolute /scripts/https-redirect.js)
- Add images/uzunyasa-logo.svg symlink to logo.svg (3 pages referenced it)
- Update © 2025 to © 2026 in 3 files

--- a/pages/araclar/kalori-karsilastirici.html
+++ b/pages/araclar/kalori-karsilastirici.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<script src="../../scripts/https-redirect.js"></script>
+<script src="/scripts/https-redirect.js"></script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
 <script>
@@ -405,7 +405,7 @@ body { font-family: 'Inter', sans-serif; background: var(--gray-50); color: var(
 </div>
 
 <footer class="kk-footer">
- <p>© 2025 <a href="../../index.html">UzunYaşa</a> — Bilimle daha uzun, daha iyi yaşam</p>
+ <p>© 2026 <a href="../../index.html">UzunYaşa</a> — Bilimle daha uzun, daha iyi yaşam</p>
  <p style="margin-top:0.25rem; font-size:0.75rem;">Kalori değerleri ortalama porsiyonlara göre yaklaşık değerlerdir.</p>
 </footer>
 
