--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<script src="scripts/https-redirect.js"></script>
+<script src="/scripts/https-redirect.js"></script>
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
 <!-- Google tag (gtag.js) -->
