--- a/pages/kullanim-sartlari.html
+++ b/pages/kullanim-sartlari.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<script src="../scripts/https-redirect.js"></script>
+<script src="/scripts/https-redirect.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
 <script>
  window.dataLayer = window.dataLayer || [];
