Add Makro Üçgeni (Macro Triangle) interactive quiz tool
- 100 Turkish foods with real macro percentages
- SVG ternary triangle with drag interaction + sliders
- Score system, streaks, category filters
- Fun facts, share functionality
- Mobile-first responsive design
- Updated araclar.html nav and sitemap.xml

--- a/pages/araclar.html
+++ b/pages/araclar.html
@@ -482,6 +482,9 @@
  <a href="araclar/egzersiz-asistani.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
   🏋️ Egzersiz Asistanı →
  </a>
+ <a href="araclar/makro-ucgeni.html" style="color:white;text-decoration:none;font-weight:600;font-size:1rem;display:inline-flex;align-items:center;gap:0.5rem;">
+  🔺 Makro Üçgeni →
+ </a>
  </div>
 
 <nav class="tool-nav">
