Performance: compress videos 16MB→3.5MB, preload=none, remove unused files

--- a/index.html
+++ b/index.html
@@ -1966,7 +1966,7 @@
  <!-- HERO SECTION -->
  <section class="hero">
  <div class="hero-overlay"></div>
- <video class="hero-video" autoplay muted loop playsinline>
+ <video preload="none" class="hero-video" autoplay muted loop playsinline>
  <source src="videos/hero.mp4" type="video/mp4">
  </video>
  <div class="hero-content">
@@ -2004,7 +2004,7 @@
  
     <!-- MANIFESTO -->
     <section style="padding:5rem 2rem;text-align:center;position:relative;overflow:hidden;">
-        <video class="section-video-bg" autoplay muted loop playsinline style="position:absolute;top:50%;left:50%;min-width:100%;min-height:100%;transform:translate(-50%,-50%);object-fit:cover;z-index:0;">
+        <video preload="none" class="section-video-bg" autoplay muted loop playsinline style="position:absolute;top:50%;left:50%;min-width:100%;min-height:100%;transform:translate(-50%,-50%);object-fit:cover;z-index:0;">
             <source src="videos/background-2.mp4" type="video/mp4">
         </video>
         <div class="anim-gradient-bg" style="position:absolute;inset:0;z-index:1;"></div>
@@ -2087,7 +2087,7 @@
 
      <!-- GÜNÜN BİLGİSİ — PREMIUM -->
     <section id="gunun-bilgisi" style="padding:0;position:relative;overflow:hidden;">
-        <video class="section-video-bg" autoplay muted loop playsinline style="position:absolute;top:50%;left:50%;min-width:100%;min-height:100%;transform:translate(-50%,-50%);object-fit:cover;z-index:0;">
+        <video preload="none" class="section-video-bg" autoplay muted loop playsinline style="position:absolute;top:50%;left:50%;min-width:100%;min-height:100%;transform:translate(-50%,-50%);object-fit:cover;z-index:0;">
             <source src="videos/background-5.mp4" type="video/mp4">
         </video>
         <div style="position:absolute;inset:0;background:rgba(13,55,59,0.60);z-index:1;"></div>
@@ -2155,7 +2155,7 @@
 
 <!-- TOOLS SECTION -->
  <section class="tools-section">
- <video class="section-video" autoplay muted loop playsinline>
+ <video preload="none" class="section-video" autoplay muted loop playsinline>
  <source src="videos/background-4.mp4" type="video/mp4">
  </video>
  <div class="section-overlay"></div>
@@ -2277,7 +2277,7 @@
 
  <!-- GOALS SECTION -->
  <section class="goals-section" id="kesfet">
- <video class="section-video" autoplay muted loop playsinline>
+ <video preload="none" class="section-video" autoplay muted loop playsinline>
  <source src="videos/background-3.mp4" type="video/mp4">
  </video>
  <div class="section-overlay"></div>
@@ -2552,7 +2552,7 @@
 
  <!-- TRUST SECTION -->
  <section id="trust" style="padding:5rem 2rem;position:relative;overflow:hidden;">
- <video class="section-video-bg" autoplay muted loop playsinline style="position:absolute;top:50%;left:50%;min-width:100%;min-height:100%;transform:translate(-50%,-50%);object-fit:cover;z-index:0;">
+ <video preload="none" class="section-video-bg" autoplay muted loop playsinline style="position:absolute;top:50%;left:50%;min-width:100%;min-height:100%;transform:translate(-50%,-50%);object-fit:cover;z-index:0;">
  <source src="videos/background-6.mp4" type="video/mp4">
  </video>
  <div style="position:absolute;inset:0;background:rgba(240,253,250,0.72);z-index:1;"></div>
@@ -2647,7 +2647,7 @@
 
  <!-- CTA SECTION -->
  <section class="cta-section">
- <video class="section-video" autoplay muted loop playsinline>
+ <video preload="none" class="section-video" autoplay muted loop playsinline>
  <source src="videos/background-7.mp4" type="video/mp4">
  </video>
  <div class="section-overlay"></div>
